Upldate layout to work on all pebble

--- a/appinfo.json
+++ b/appinfo.json
@@ -9,13 +9,38 @@
     "resources": {
         "media": [
             {
-                "file": "images/cross.png",
-                "name": "CROSS",
+                "file": "images/dock_icon_bw.png",
+                "name": "DOCK_ICON_BW",
+                "type": "png"
+            },
+            {
+                "file": "images/spot_icon_bw.png",
+                "name": "SPOT_ICON_BW",
+                "type": "png"
+            },
+            {
+                "file": "images/clean_icon_bw.png",
+                "name": "CLEAN_ICON_BW",
+                "type": "png"
+            },
+            {
+                "file": "images/cross_bw.png",
+                "name": "CROSS_BW",
                 "type": "png"
             },
             {
                 "file": "images/roomba_color.png",
                 "name": "ROOMBA_COLOR",
+                "type": "png"
+            },
+            {
+                "file": "images/roomba_bw.png",
+                "name": "ROOMBA_BW",
+                "type": "png"
+            },
+            {
+                "file": "images/cross.png",
+                "name": "CROSS",
                 "type": "png"
             },
             {
@@ -37,11 +62,6 @@
                 "file": "images/roomba_icon_bw.png",
                 "menuIcon": true,
                 "name": "ROOMBA_ICON_BW",
-                "type": "png"
-            },
-            {
-                "file": "images/roomba_bw.png",
-                "name": "ROOMBA_BW",
                 "type": "png"
             }
         ]
